# ariths-gen

./: .gitignore  .testall.sh  README.md  arithmetic_circuits.py  arithmetic_circuits_generator.py  ariths_gen.py  chr2c.py  generate_axmuls.py  generate_mac.py  generate_quad_lib.py  generate_test.py  index.html  logic_gates.py  logic_gates_generator.py  multi_bit_circuits.py  one_bit_circuits.py  pdk.html  setup.cfg  test_gen.py  wire_components.py  yosys_equiv_check.sh
Tests/: README.md  c_tests.sh  flat_c_tests.sh
ariths_gen/: __init__.py  index.html  pdk.py
c_circuits_simulation_tests/: README.md  c_tests.sh
core/: cgp_circuit.html  index.html
docs/: README.md  and_gate.md  arithmetic_circuit.md  bus.md  constant_wire_value_0.md  constant_wire_value_1.md  full_adder.md  full_adder_pg.md  half_adder.md  inverted_logic_gate.md  logic_gate.md  multiplier_circuit.md  nand_gate.md  nor_gate.md  not_gate.md  or_gate.md  pg_logic_block.md  signed_array_multiplier.md  signed_carry_lookahead_adder.md  signed_dadda_multiplier.md  signed_pg_ripple_carry_adder.md  signed_ripple_carry_adder.md  signed_wallace_multiplier.md  three_input_one_bit_circuit.md  two_input_one_bit_circuit.md  unsigned_array_multiplier.md  unsigned_carry_lookahead_adder.md  unsigned_dadda_multiplier.md  unsigned_pg_ripple_carry_adder.md  unsigned_ripple_carry_adder.md  unsigned_wallace_multiplier.md  wire.md  xnor_gate.md  xor_gate.md
multi_bit_circuits/: index.html
one_bit_circuits/: index.html
tests/: adder_signed.c  adder_unsigned.c  mac.c  multiplier_signed.c  multiplier_unsigned.c  (+22 more)
(+5670 files in other folders)
