[metadata]
name = ariths_gen
description = Arithmetic circuits generator to Verilog, BLIF, C etc.
version = attr: ariths_gen.VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Jan Klhufek, Vojtech Mrazek
author_email = iklhufek@fit.vutbr.cz
url = https://github.com/ehw-fit/ariths-gen
download_urls = https://pypi.org/project/ariths-gen
project_urls =
	Code = https://github.com/ehw-fit/ariths-gen
	Issue tracker = https://github.com/ehw-fit/ariths-gen/issues


[options]
packages = find:
python_requires = >=3.8
